{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 169,
  "lineage": "5fe82be0-9a1a-ccd3-c749-d9d2ce99aecc",
  "resources": [
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d90826d265ec073",
            "arn": "arn:aws:ec2:us-east-1:600748199510:elastic-ip/eipalloc-07d90826d265ec073",
            "association_id": "eipassoc-029bf6b064f610ff4",
            "domain": "vpc",
            "id": "eipalloc-07d90826d265ec073",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03c0d0ac06cb8c670",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-44-199-56-67.compute-1.amazonaws.com",
            "public_ip": "44.199.56.67",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:internet-gateway/igw-0183ee6ac5846bc17",
            "id": "igw-0183ee6ac5846bc17",
            "owner_id": "600748199510",
            "tags": {
              "Name": "EKS-By-Terraform-igw"
            },
            "tags_all": {
              "Name": "EKS-By-Terraform-igw"
            },
            "vpc_id": "vpc-06ed7597dd8cd268d"
          },
          "dependencies": [
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d90826d265ec073",
            "association_id": "eipassoc-029bf6b064f610ff4",
            "connectivity_type": "public",
            "id": "nat-05a3af21e4e0b41be",
            "network_interface_id": "eni-03c0d0ac06cb8c670",
            "private_ip": "10.0.1.251",
            "public_ip": "44.199.56.67",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0101cb9624afb03d1",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.vpc_demo.aws_eip.elastic_ip",
            "module.vpc_demo.aws_subnet.public-subnet-1",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b5ba198839ba61c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05a3af21e4e0b41be",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b5ba198839ba61c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_demo.aws_eip.elastic_ip",
            "module.vpc_demo.aws_nat_gateway.nat_gateway",
            "module.vpc_demo.aws_route_table.private-rt",
            "module.vpc_demo.aws_subnet.public-subnet-1",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:route-table/rtb-02b5ba198839ba61c",
            "id": "rtb-02b5ba198839ba61c",
            "owner_id": "600748199510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05a3af21e4e0b41be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ed7597dd8cd268d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:route-table/rtb-022ee569a4399ede5",
            "id": "rtb-022ee569a4399ede5",
            "owner_id": "600748199510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0183ee6ac5846bc17",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ed7597dd8cd268d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_demo.aws_internet_gateway.internet_gateway",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cf69863af37247b",
            "route_table_id": "rtb-02b5ba198839ba61c",
            "subnet_id": "subnet-047188a34e12e533d"
          },
          "dependencies": [
            "module.vpc_demo.aws_route_table.private-rt",
            "module.vpc_demo.aws_subnet.private-subnet-1",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0560d764863cc2143",
            "route_table_id": "rtb-02b5ba198839ba61c",
            "subnet_id": "subnet-083aba4a1a87e9ecc"
          },
          "dependencies": [
            "module.vpc_demo.aws_route_table.private-rt",
            "module.vpc_demo.aws_subnet.private-subnet-2",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cbff9c4eaa19a1b",
            "route_table_id": "rtb-022ee569a4399ede5",
            "subnet_id": "subnet-0101cb9624afb03d1"
          },
          "dependencies": [
            "module.vpc_demo.aws_internet_gateway.internet_gateway",
            "module.vpc_demo.aws_route_table.public-rt",
            "module.vpc_demo.aws_subnet.public-subnet-1",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b25253e00f20aef",
            "route_table_id": "rtb-022ee569a4399ede5",
            "subnet_id": "subnet-0f7954c45a16f5637"
          },
          "dependencies": [
            "module.vpc_demo.aws_internet_gateway.internet_gateway",
            "module.vpc_demo.aws_route_table.public-rt",
            "module.vpc_demo.aws_subnet.public-subnet-2",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "s_g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:security-group/sg-04318670fb16b736e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04318670fb16b736e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS traffic from 10.0.0.0/16",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "103.215.158.90/32"
                ],
                "description": "Allow FTP traffic from my IP",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "103.215.158.90/32"
                ],
                "description": "Allow SSH traffic from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250612052702512100000008",
            "name_prefix": "terraform-",
            "owner_id": "600748199510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-security-group",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks"
            },
            "tags_all": {
              "Name": "my-security-group",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ed7597dd8cd268d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_demo.aws_vpc.my-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:subnet/subnet-047188a34e12e533d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047188a34e12e533d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600748199510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ed7597dd8cd268d"
          },
          "dependencies": [
            "module.vpc_demo.aws_vpc.my-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:subnet/subnet-083aba4a1a87e9ecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083aba4a1a87e9ecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600748199510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ed7597dd8cd268d"
          },
          "dependencies": [
            "module.vpc_demo.aws_vpc.my-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:subnet/subnet-0101cb9624afb03d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0101cb9624afb03d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600748199510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ed7597dd8cd268d"
          },
          "dependencies": [
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:subnet/subnet-0f7954c45a16f5637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7954c45a16f5637",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600748199510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "karpenter.sh/discovery": "EKS-By-Terraform-eks",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ed7597dd8cd268d"
          },
          "dependencies": [
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:vpc/vpc-06ed7597dd8cd268d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08292c08a32a37b09",
            "default_route_table_id": "rtb-053fb8c634691e3d3",
            "default_security_group_id": "sg-049d34c1501ba82a0",
            "dhcp_options_id": "dopt-09a50bb26fc4cbcc7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ed7597dd8cd268d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053fb8c634691e3d3",
            "owner_id": "600748199510",
            "tags": {
              "Name": "EKS-By-Terraform-vpc"
            },
            "tags_all": {
              "Name": "EKS-By-Terraform-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:security-group-rule/sgr-08b24fba3009bc053",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08b24fba3009bc053",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04318670fb16b736e",
            "security_group_rule_id": "sgr-08b24fba3009bc053",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_demo.aws_security_group.s_g",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_demo",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600748199510:security-group-rule/sgr-0674813d61013f92c",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0674813d61013f92c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04318670fb16b736e",
            "security_group_rule_id": "sgr-0674813d61013f92c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_demo.aws_security_group.s_g",
            "module.vpc_demo.aws_vpc.my-vpc"
          ]
        }
      ]
    }
  ]
}